rails-6-0-3-security-vulnerabilities: Fix code of [CVE-2020-8162]

--- a/rails-6-0-3-security-vulnerabilities/app/views/circumvention_of_file_size_limits/edit.html.erb
+++ b/rails-6-0-3-security-vulnerabilities/app/views/circumvention_of_file_size_limits/edit.html.erb
@@ -9,7 +9,7 @@
   </p>
   <p>
     <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
+    <%= f.file_field :avatar, direct_upload: true %>
   </p>
   <%= f.submit %>
 <% end %>
